--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ExonPodcast</string>
+    <string name="podcasts">Podcasts</string>
+    <string name="discover">Discover</string>
+    <string name="downloaded">Downloaded</string>
+    <string name="settings">Settings</string>
 </resources>
